--- a/Reports/Results/report.html
+++ b/Reports/Results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,264964],[[4,5,6,7,[],[1,35,69760],[],[[8,0,0,[],[1,444,69348],[]]],[],[1,1,0,0]],[9,10,11,12,[],[1,69799,26555],[],[[13,0,0,[],[1,69810,26542],[]]],[],[1,1,0,0]],[14,15,16,17,[],[1,96357,94986],[],[[18,0,0,[19],[1,100485,38902],[]],[20,0,0,[21],[1,139390,51951],[]]],[],[2,2,0,0]],[22,23,24,25,[],[0,191347,73613],[],[[26,0,0,[],[0,191358,73600,27],[]]],[],[1,0,1,0]]],[],[],[5,4,1,0]];
+window.output["suite"] = [1,2,3,4,[],[1,0,92310],[],[[5,0,0,[],[1,494,57949],[]],[6,0,0,[],[1,58445,33863],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*TestCases","*C:\\Users\\fujitsu\\Repos\\KarimRobot-Framework\\TestCases","*../../TestCases","*Alerts Frames","*C:\\Users\\fujitsu\\Repos\\KarimRobot-Framework\\TestCases\\alerts_frames.robot","*../../TestCases/alerts_frames.robot","*<p>this tcs made for alert handling and frames\x3c/p>","*Alert handling","*Dropdown","*C:\\Users\\fujitsu\\Repos\\KarimRobot-Framework\\TestCases\\dropdown.robot","*../../TestCases/dropdown.robot","*<p>This test case is for practicing checkbox testing\x3c/p>","*Working on dropdown","*Login","*C:\\Users\\fujitsu\\Repos\\KarimRobot-Framework\\TestCases\\login.robot","*../../TestCases/login.robot","*<p>This test case is for practicing with the Robot Framework\x3c/p>","*Valid_Login_Test","*valid_login","*Invalid_Login_Test","*invalid_login","*Speedtest","*C:\\Users\\fujitsu\\Repos\\KarimRobot-Framework\\TestCases\\speedtest.robot","*../../TestCases/speedtest.robot","*<p>This test case is for practicing with wait and speed settings.\x3c/p>","*Registration","*Text 'Your registration completed' did not appear in 10 seconds."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Alerts Frames","*C:\\Users\\fujitsu\\Repos\\KarimRobot-Framework\\TestCases\\alerts_frames.robot","*../../TestCases/alerts_frames.robot","*<p>this tcs made for alert handling and frames AND including for loop on browsers\x3c/p>","*Alert handling","*Frame handling"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:04:20","fail":1,"label":"All Tests","pass":4,"skip":0}],[{"elapsed":"00:00:52","fail":0,"label":"invalid_login","pass":1,"skip":0},{"elapsed":"00:00:39","fail":0,"label":"valid_login","pass":1,"skip":0}],[{"elapsed":"00:04:25","fail":1,"id":"s1","label":"TestCases","name":"TestCases","pass":4,"skip":0},{"elapsed":"00:01:10","fail":0,"id":"s1-s1","label":"TestCases.Alerts Frames","name":"Alerts Frames","pass":1,"skip":0},{"elapsed":"00:00:27","fail":0,"id":"s1-s2","label":"TestCases.Dropdown","name":"Dropdown","pass":1,"skip":0},{"elapsed":"00:01:35","fail":0,"id":"s1-s3","label":"TestCases.Login","name":"Login","pass":2,"skip":0},{"elapsed":"00:01:14","fail":1,"id":"s1-s4","label":"TestCases.Speedtest","name":"Speedtest","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:32","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:01:32","fail":0,"id":"s1","label":"Alerts Frames","name":"Alerts Frames","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1730656770119;
+window.output["baseMillis"] = 1730661261839;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 265035;
+window.output["generated"] = 92371;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
