add multi window tcs

--- a/Reports/Results/report.html
+++ b/Reports/Results/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,92310],[],[[5,0,0,[],[1,494,57949],[]],[6,0,0,[],[1,58445,33863],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,27448],[],[[5,0,0,[],[0,231,27216,6],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Alerts Frames","*C:\\Users\\fujitsu\\Repos\\KarimRobot-Framework\\TestCases\\alerts_frames.robot","*../../TestCases/alerts_frames.robot","*<p>this tcs made for alert handling and frames AND including for loop on browsers\x3c/p>","*Alert handling","*Frame handling"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Multi Window Handle","*C:\\Users\\fujitsu\\Repos\\KarimRobot-Framework\\TestCases\\multi_window_handle.robot","*../../TestCases/multi_window_handle.robot","*<p>This test case is to practice window switch and handle\x3c/p>","*Checking Tabbed Window","*Element with locator 'xpath=//*[text()='Read more']' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:32","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:01:32","fail":0,"id":"s1","label":"Alerts Frames","name":"Alerts Frames","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:27","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:27","fail":1,"id":"s1","label":"Multi Window Handle","name":"Multi Window Handle","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1730661261839;
+window.output["baseMillis"] = 1730761519273;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 92371;
+window.output["generated"] = 27468;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
